# internal/api/grpc/management/user.go
@@ -5,8 +5,7 @@ import (
 
 	"github.com/golang/protobuf/ptypes/empty"
 
-	grpc_util "github.com/caos/zitadel/internal/api/grpc"
-	"github.com/caos/zitadel/internal/api/http"
+	"github.com/caos/zitadel/internal/api/authz"
 	"github.com/caos/zitadel/internal/errors"
 	"github.com/caos/zitadel/pkg/grpc/management"
 )
@@ -19,8 +18,8 @@ func (s *Server) GetUserByID(ctx context.Context, id *management.UserID) (*manag
 	return userViewFromModel(user), nil
 }
 
-func (s *Server) GetUserByEmailGlobal(ctx context.Context, email *management.Email) (*management.UserView, error) {
-	user, err := s.user.GetGlobalUserByEmail(ctx, email.Email)
+func (s *Server) GetUserByLoginNameGlobal(ctx context.Context, loginName *management.LoginName) (*management.UserView, error) {
+	user, err := s.user.GetUserByLoginNameGlobal(ctx, loginName.LoginName)
 	if err != nil {
 		return nil, err
 	}
@@ -29,8 +28,7 @@ func (s *Server) GetUserByEmailGlobal(ctx context.Context, email *management.Ema
 
 func (s *Server) SearchUsers(ctx context.Context, in *management.UserSearchRequest) (*management.UserSearchResponse, error) {
 	request := userSearchRequestsToModel(in)
-	orgID := grpc_util.GetHeader(ctx, http.ZitadelOrgID)
-	request.AppendMyOrgQuery(orgID)
+	request.AppendMyOrgQuery(authz.GetCtxData(ctx).OrgID)
 	response, err := s.user.SearchUsers(ctx, request)
 	if err != nil {
 		return nil, err
@@ -104,6 +102,10 @@ func (s *Server) GetUserProfile(ctx context.Context, in *management.UserID) (*ma
 		return nil, err
 	}
 	return profileViewFromModel(profile), nil
+}
+
+func (s *Server) ChangeUserUserName(ctx context.Context, request *management.UpdateUserUserNameRequest) (*empty.Empty, error) {
+	return &empty.Empty{}, s.user.ChangeUsername(ctx, request.Id, request.UserName)
 }
 
 func (s *Server) UpdateUserProfile(ctx context.Context, request *management.UpdateUserProfileRequest) (*management.UserProfile, error) {
